<resources>
    <string name="app_name">Appvisame</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt_login_usuario">USUARIO:</string>
    <string name="txt_login_contra">CONTRASEÑA:</string>
    <string name="txt_btn_iniciar_sesion">Iniciar sesión</string>
    <string name="txt_selecciona_area">Selecciona el área:</string>
    <string name="txt_titulo">Nombre:</string>
    <string name="txt_description">Descripción:</string>
    <string name="txt_agrega_description">Agrega una descripción del lugar…</string>
    <string name="txt_nombre_reporte">Nombre del reporte…</string>
    <string name="title_reporte">Reportar un problema</string>
    <string name="txt_seleciona_importancia">Importancia del reporte:</string>
    <string name="txt_fecha_st">Fecha:</string>
    <string name="txt_enviando">Enviando reporte</string>
    <string name="txt_quiero_elegir">Elegir de nuevo</string>
    <string name="txt_btn_reportar">Enviar reporte</string>
    <string name="txt_bienvenido">Bienvenido</string>
    <string name="title_config">Configuración</string>
    <string name="transition_name_name">transition:NAME</string>
    <string name="transition_name_circle">transition:CIRCLE</string>
    <string name="transition_name_phone">transition:PHONE</string>
    <string name="txt_campo_vacio">Éste campo es necesario</string>
    <string name="txt_progress_iniciando">Iniciando sesión</string>
    <string name="txt_progress_bienvenido">Bienvenido</string>
    <string name="txt_user_incorrecto">Usuario incorrecto</string>
    <string name="txt_pass_incorrecto">Contraseña incorrecta</string>
    <string name="txt_error">¡ERROR!</string>
    <string name="txt_pass_usuario_incorrecto">El usuario o la contraseña son incorrectos</string>
    <string name="txt_entendido">Entendido</string>
    <string name="txt_desea_salir">¿Deseas salir?</string>
    <string name="txt_estas_seguro">¿Estás seguro que deseas salir?</string>
    <string name="txt_salir">Salir</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_progress_cerrando">Cerrando sesión</string>
    <string name="txt_progress_espere">Espere, por favor…</string>
    <string name="txt_config">Configuración</string>
    <string name="txt_cerrar_sesion">Cerrar Sesión</string>

</resources>
