<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_selecciona_area"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black_color"
        android:id="@+id/textView"
        android:layout_marginLeft="10dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_areas"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black_color"
        android:id="@+id/textView3"
        android:layout_marginLeft="10dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/txt_nombre_reporte"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:id="@+id/editText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_description"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black_color"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/txt_agrega_description"
        android:id="@+id/editText2"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

</LinearLayout>