<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/primary_color"
        android:layout_marginBottom="30dp"
        android:elevation="5dp"
        android:layout_gravity="right">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_bienvenido"
            android:textStyle="bold"
            android:id="@+id/txt_bienvenido"
            android:textColor="#FFF"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <com.pkmmte.view.CircularImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/circular_im"
        app:border="true"
        app:border_color="#EEEEEE"
        app:border_width="4dp"
        app:shadow="true"
        android:id="@+id/image_circular"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_login_usuario"
        android:textColor="@color/primary_dark_color"
        android:textStyle="bold"
        android:id="@+id/textView10"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:elevation="4dp"
        android:drawableLeft="@drawable/ic_action_person"
        android:id="@+id/edtxtUsuario" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_login_contra"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textColor="@color/primary_dark_color"
        android:layout_marginLeft="15dp"
        android:id="@+id/textView11" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:elevation="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:drawableLeft="@drawable/ic_action_secure"
        android:id="@+id/edtxtPassw" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_iniciar_sesion"
        android:id="@+id/btnIniciar"
        android:elevation="10dp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:background="@color/primary_dark_color"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"/>

</LinearLayout>