<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:elevation="8dp"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar_transparent"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:elevation="8dp"
            android:src="@drawable/material_wallpaper"/>

        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:padding="@dimen/activity_vertical_margin">

        <View
            android:id="@+id/DETAILS_circle"
            android:layout_width="48dp"
            android:transitionName="@string/transition_name_circle"
            android:layout_height="48dp"
            android:background="@drawable/circle"
            android:layout_centerVertical="true"
            android:layout_marginBottom="-20dp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/DETAILS_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="@string/transition_name_name"
            android:text="Jonh Doe"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/DETAILS_circle"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:textColor="#000"
            android:textSize="25sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/DETAILS_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Puesto:"
                android:textColor="#000"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/DETAILS_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="@string/transition_name_phone"
                android:text="+01 123456789"
                android:textColor="#9f9f9f"
                android:layout_marginLeft="15dp"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/DETAILS_phone_label"
                android:layout_toEndOf="@+id/DETAILS_phone_label" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/DETAILS_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/DETAILS_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="jonh.doe@example.com"
                android:textColor="#9f9f9f"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/DETAILS_email_label"
                android:layout_toEndOf="@+id/DETAILS_email_label" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/DETAILS_city_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Teléfono:"
                android:textColor="#000"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/DETAILS_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rome"
                android:textColor="#9f9f9f"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/DETAILS_city_label"
                android:layout_toEndOf="@+id/DETAILS_city_label" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>